# onnx-perf-test

./: README.md  pyproject.toml  requirements.txt
data/: model.onnx  model_fp16.onnx
onnx_perf_test/: analyze_onnx_profile.py  onnx_perf_test.py  utils.py
