[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-perf-test"
version = "0.7.0"
description = "A simple tool to measure the performance of ONNX models in Python."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ibai Gorordo"}
]
dependencies = [
    "pandas",
    "argparse",
    "matplotlib",
    "onnxruntime==1.18.0; sys_platform == 'darwin' and platform_machine != 'arm64'",
    "onnxruntime-silicon==1.16.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime-gpu==1.18.0; sys_platform != 'darwin'"
]

[tool.setuptools.packages.find]
include = ["onnx_perf_test"]

[project.scripts]
onnx_perf_test = "onnx_perf_test.onnx_perf_test:main"
analyze_onnx_profile = "onnx_perf_test.analyze_onnx_profile:main"

[project.urls]
Homepage = "https://github.com/ibaiGorordo/onnx-perf-test"
